compiler/tests/golden/errors/undefined_ontology.txt
error: Undefined ontology prefix `undefined_ontology` in type `undefined_ontology:drug` (used in Drug). Add `ontology undefined_ontology from "...";` declaration.
  --> /tmp/sounio_test_XXXX/undefined_onto.dm:2:13
   |
  2 | type Drug = undefined_ontology:drug;
   |              ^

Error:   × Type errors:
  │ Undefined ontology prefix `undefined_ontology` in type
  │ `undefined_ontology:drug` (used in Drug). Add `ontology undefined_ontology
  │ from "...";` declaration.